# awp

./: .gitignore  README.md  certigo.pem  convert.py  fill.js  main.py  pyproject.toml
awp/: __main__.py  config.py  main.py  parser.py  request.py  types.py  utils.py
siak_awp_python/: __main__.py  config.py  main.py  parser.py  request.py  types.py  utils.py
siak_awp_python/static/: help.md
siak_awp_python/tui/: __init__.py  legacy.py
siak_awp_python/tui/components/: listing.py  matkul_tree.py
tests/: test_siak_awp_python.py
utils/: convert_to_monkey.py  monkeyfill.js
